// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup - Demo Different positions 1`] = `
<div class="n22-example-child n22-example-child-popup n22-example-child-popup-0">
  <div class="n22-popup with-mask center" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-fade" class="n22-popup-box n22-fade" style="display:none;">
      <div class="n22-example-popup n22-example-popup-center">
        Popup Center
      </div>
    </div>
  </div>

  ] <div class="n22-popup with-mask bottom" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-slide-up" class="n22-popup-box n22-slide-up" style="display:none;">
      <div class="md-popup-title-bar large">
        <div class="title-bar-left md-popup-cancel">cancel</div>
        <div class="title-bar-title">
          <p class="title">Popup Title</p>
          <p class="describe">Popup Description</p>
        </div>
        <div class="title-bar-right md-popup-confirm">ok</div>
      </div>
      <div class="n22-example-popup n22-example-popup-bottom">
        Popup Bottom
      </div>
    </div>
  </div>
  <div class="n22-popup top" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-slide-down" class="n22-popup-box n22-slide-down" style="display:none;">
      <div class="n22-example-popup n22-example-popup-top">
        Popup Top
        <n22-icon name="close"></n22-icon>
      </div>
    </div>
  </div>
  <div class="n22-popup with-mask left" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-slide-right" class="n22-popup-box n22-slide-right" style="display:none;">
      <div class="n22-example-popup n22-example-popup-left">
        Popup Left
      </div>
    </div>
  </div>
  <div class="n22-popup with-mask right" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-slide-left" class="n22-popup-box n22-slide-left" style="display:none;">
      <div class="n22-example-popup n22-example-popup-right">
        Popup Right
      </div>
    </div>
  </div>
</div>
`;

exports[`Popup - Demo Other configurations 1`] = `
<div class="n22-example-child n22-example-child-popup n22-example-child-popup-2">
  <div class="n22-popup top" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-slide-down" class="n22-popup-box n22-slide-down" style="display:none;">
      <div class="n22-example-popup n22-example-popup-top">
        Popup Top
        <n22-icon name="close"></n22-icon>
      </div>
    </div>
  </div>
  <div class="n22-popup with-mask bottom" style="display:none;">
    <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
    <div name="n22-slide-up" class="n22-popup-box n22-slide-up" style="display:none;">
      <div class="md-popup-title-bar">
        <div class="title-bar-left md-popup-cancel">cancel</div>
        <div class="title-bar-title">
          <p class="title">Prevent Mask Click</p>
          <!---->
        </div>
        <div class="title-bar-right md-popup-confirm">ok</div>
      </div>
      <div class="n22-example-popup n22-example-popup-bottom">
        Popup Bottom
      </div>
    </div>
  </div>
</div>
`;
